--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-precaching": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
